# EraChain

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/chain/: block.rs  blockChain.rs  mod.rs  transaction.rs
src/chain/consensus/: mod.rs
src/network/: behaviour.rs  command.rs  mod.rs  node.rs
src/utils/: mod.rs  secret.rs  serializer.rs
src/wallets/: mod.rs
