[package]
name = "ErcChain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.9.0"
tracing = "0.1"
tracing-subscriber = "0.2"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.79"
bincode = "1.3.3"
rust-crypto = "0.2.36"
chrono = "0.4.19"
bigint = "4.4.3"
sled = "0.34"
ring = "0.16.20"
rustc-serialize = "0.3.24"
bs58 = "0.4.0"
futures = "0.3"
futures-timer = "3.0.2"
libp2p = "0.46"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
once_cell = "1.10.0"
clap = {version = "3.2", features = ["derive"]}
lazy_static = "1.4"
bytes = "1.2"

